# discord-activities

./: .gitignore  Cargo.toml  wrangler.example.toml
src/: discord.rs  lib.rs  verify.rs
