[package]
name = "discord-activities"
version = "0.1.0"
authors = ["y3ll0w"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.9"
hex = "0.4.3"
ed25519-dalek = "1.0.1"
serde = "1.0.152"
serde_repr = "0.1.10"
serde_json = "1.0.67"
console_error_panic_hook = { version = "0.1.1", optional = true }
reqwest = { version = "0.11", features = ["json"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
